Fixes for Analytics